# CurriMax

./: .replit  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: main_currimax.yml
instance/: db.sqlite3  db2.sqlite3
static/: style.css
templates/: avaliacao.html  index.html
